# aether-dsp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: samples-manifest.json
assets/instruments/: drums-studio.json
assets/presets/world/: krar.json  presets-index.json
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: commands.rs  main.rs
crates/aether-core/: Cargo.toml  README.md  RUN_PROPERTY_TESTS.md
crates/aether-core/benches/: rt_bench.rs
crates/aether-core/src/: arena.rs  buffer_pool.rs  command.rs  graph.rs  lib.rs  node.rs  param.rs  scheduler.rs  state.rs
crates/aether-host/: Cargo.toml  RUN_PROPERTY_TESTS.md
crates/aether-host/src/: bridge.rs  graph_manager.rs  lib.rs  main.rs  undo_stack.rs  wav_writer.rs  ws_server.rs
crates/aether-manifest/: Cargo.toml  README.md
crates/aether-manifest/src/: lib.rs
crates/aether-midi/: Cargo.toml  README.md
crates/aether-midi/src/: engine.rs  event.rs  lib.rs  router.rs  tuning.rs
crates/aether-ndk/: Cargo.toml  README.md
crates/aether-ndk-macro/: Cargo.toml  README.md
crates/aether-ndk-macro/src/: lib.rs
crates/aether-ndk/examples/: bitcrusher.rs  registry_demo.rs  tremolo.rs
crates/aether-ndk/src/: lib.rs  node.rs  param.rs  registry.rs  schema.rs
crates/aether-nodes/: Cargo.toml  README.md  RUN_PROPERTY_TESTS.md
crates/aether-nodes/src/: chorus.rs  compressor.rs  delay.rs  envelope.rs  filter.rs  formant.rs  gain.rs  granular.rs  karplus_strong.rs  lfo.rs  lib.rs  mixer.rs  moog_ladder.rs  oscillator.rs  record.rs  reverb.rs  scope.rs  waveshaper.rs
crates/aether-nodes/src/tests/: regression.rs
crates/aether-plugin/: Cargo.toml  build.rs
crates/aether-plugin/src/: lib.rs
crates/aether-registry/: Cargo.toml  README.md
crates/aether-registry/src/: lib.rs
crates/aether-sampler/: Cargo.toml  README.md  RUN_PROPERTY_TESTS.md
crates/aether-sampler/src/: buffer.rs  instrument.rs  lib.rs  node.rs  voice.rs
crates/aether-samples/: Cargo.toml  README.md
crates/aether-samples/src/: error.rs  lib.rs  manager.rs  manifest.rs  progress.rs
crates/aether-timbre/: Cargo.toml  README.md
crates/aether-timbre/src/: analysis.rs  lib.rs  node.rs  synthesizer.rs  transfer.rs
crates/aether-ui/: Cargo.toml
crates/aether-ui/src/: app_state.rs  daw_app.rs  engine.rs  instrument.rs  lib.rs  main.rs  theme.rs
crates/aether-ui/src/views/: daw_shell.rs  mixer_view.rs  mod.rs  patcher_view.rs  perform_view.rs  piano_roll.rs  song_view.rs
crates/aether-ui/src/widgets/: fader.rs  knob.rs  mod.rs  piano_keys.rs  vu_meter.rs  waveform.rs
docs/: RELEASE_CHECKLIST.md  ROADMAP_V2.md  paper_draft.md
docs/design/: BUILD_COMPLETE.md  COMPLETE_DELIVERY.md  DESIGN_SYSTEM.md  FINAL_DESIGN_SPEC.md  IMPLEMENTATION_PLAN.md  MOCKUPS_INDEX.md  MOCKUP_SUMMARY.md  REDESIGN_VISION.md  UI_FEATURES_MASTER_LIST.md
docs/design/mockups/: 01-main-interface.html  README.md  index.html
docs/latex/: aetherdsp.tex
docs/pitch/: index.html
docs/sdk/: CLI_REFERENCE.md  MANIFEST_SPEC.md  NDK_GUIDE.md
scripts/: build_release.ps1  build_tauri.ps1  build_western_instruments.ps1  download_western_samples.ps1  github_init.ps1  make_instrument.ps1  publish_crates.ps1  publish_github.ps1
ui/: FORCE-RESTART.ps1  catalog-test.html  index.html  package-lock.json  package.json  restart-dev.ps1  vite.config.ts
ui/public/: version.json
ui/public/catalog/: instruments.json
ui/public/instruments/: accordion.aether-instrument  bagpipe.aether-instrument  balafon.aether-instrument  banjo.aether-instrument  bansuri.aether-instrument  begena.aether-instrument  berimbau.aether-instrument  buzuq.aether-instrument  cajon.aether-instrument  cello.aether-instrument  charango.aether-instrument  clarinet.aether-instrument  cuatro.aether-instrument  darbuka.aether-instrument  dizi.aether-instrument  djembe.aether-instrument  erhu.aether-instrument  example-with-zones.aether-instrument  flute.aether-instrument  guqin.aether-instrument  harp.aether-instrument  hurdy-gurdy.aether-instrument  kebero.aether-instrument  kirar.aether-instrument  kora.aether-instrument  koto.aether-instrument  krar.aether-instrument  marimba.aether-instrument  masenko.aether-instrument  masenqo.aether-instrument  mbira.aether-instrument  mellotron.aether-instrument  moog-synth.aether-instrument  mridangam.aether-instrument  ney.aether-instrument  ngoni.aether-instrument  oboe.aether-instrument  ondes-martenot.aether-instrument  oud.aether-instrument  pipa.aether-instrument  (+21 more)
ui/public/patches/: acid-bass.json  simple-synth.json
ui/src/: App.css  App.tsx  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/catalog/: AddInstrumentForm.tsx  InstrumentBrowser.tsx  InstrumentCard.tsx  catalogData.ts  countryFlags.ts  index.ts  syntheticSource.ts  timbreTransfer.ts  types.ts  useCatalog.ts  useInstrumentEngine.ts  usePresetLoader.ts  westernInstruments.ts
ui/src/components/: DspNode.tsx  InstrumentInterface.tsx  InstrumentRecorder.tsx  KeyboardPlayer.css  KeyboardPlayer.tsx  ModulationMatrix.css  ModulationMatrix.tsx  PatchBrowser.tsx  SampleLibrary.tsx  SettingsPanel.tsx  Toolbar.tsx  TopBar.css  TopBar.tsx
ui/src/daw/: DawShell.tsx
ui/src/daw/components/: DawBrowser.tsx  DawTopBar.tsx  PropertiesPanel.tsx
ui/src/hooks/: useEngineSocket.ts  useGraphStore.ts  useLookaheadScheduler.ts  usePatchShare.ts  useProjectSave.ts  useSampleLibrary.ts  useWebSocket.ts
ui/src/instrument-maker/: InstrumentMaker.tsx  types.ts
ui/src/lib/: crashReporter.ts
ui/src/modes/: ArrangeMode.css  ArrangeMode.tsx  CreateMode.css  CreateMode.tsx  ExploreMode.css  ExploreMode.tsx  PerformMode.css  PerformMode.tsx  rhythmic-systems.ts  scale-systems.ts
ui/src/modules/: ModuleBar.tsx  ModulePanel.tsx  moduleRegistry.ts  types.ts  useModuleStore.ts  useTransportStore.ts
ui/src/store/: useModeStore.ts
ui/src/styles/: tokens.css
ui/src/test/: engineStore.test.ts  useEngineSocket.test.ts
ui/src/types/: graph.ts  modes.ts
(+35 files in other folders)
