[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for AetherDSP — node scaffolding, manifest validation, and registry management"
# Not published to crates.io — application binary
publish = false

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-core     = { version = "0.1", path = "../aether-core" }
aether-ndk      = { version = "0.1", path = "../aether-ndk" }
aether-manifest = { version = "0.1", path = "../aether-manifest" }
aether-registry = { version = "0.1", path = "../aether-registry" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
