[package]
name = "aetherdsp-ndk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aetherdsp-ndk"
readme = "README.md"
description = "Node Development Kit for AetherDSP — build custom real-time DSP nodes with a single #[aether_node] macro"
keywords = ["audio", "dsp", "plugin", "synthesis", "real-time"]
categories = ["multimedia::audio", "development-tools"]

[lib]
name = "aether_ndk"

[dependencies]
aetherdsp-core    = { version = "0.1", path = "../aether-core" }
aetherdsp-nodes   = { version = "0.1", path = "../aether-nodes" }
aetherdsp-ndk-macro = { version = "0.1", path = "../aether-ndk-macro" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
