[package]
name = "aether-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # CLAP/VST3 require a shared library

[build-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
aether-core = { path = "../aether-core" }
aether-nodes = { path = "../aether-nodes" }
aether-sampler = { path = "../aether-sampler" }
aether-midi = { path = "../aether-midi" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
