[package]
name = "aetherdsp-sampler"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aetherdsp-sampler"
readme = "README.md"
description = "Polyphonic sampler engine for AetherDSP — multi-sample instruments, voice management, and WAV loading"
keywords = ["audio", "sampler", "synthesis", "dsp", "real-time"]
categories = ["multimedia::audio"]

[lib]
name = "aether_sampler"

[dev-dependencies]
proptest = "1"

[dependencies]
aetherdsp-core = { version = "0.1", path = "../aether-core" }
aetherdsp-midi = { version = "0.1", path = "../aether-midi" }
arc-swap = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
