[package]
name = "aetherdsp-timbre"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aetherdsp-timbre"
readme = "README.md"
description = "Spectral timbre analysis and transfer for AetherDSP — FFT-based instrument resynthesis"
keywords = ["audio", "dsp", "timbre", "spectral", "synthesis"]
categories = ["multimedia::audio", "science"]

[lib]
name = "aether_timbre"

[dependencies]
aetherdsp-core    = { version = "0.1", path = "../aether-core" }
aetherdsp-sampler = { version = "0.2", path = "../aether-sampler" }
rustfft = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
