[package]
name = "aether-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native GPU-accelerated UI for Aether Studio — built with iced (wgpu)"
publish = false

[[bin]]
name = "aether-studio"
path = "src/main.rs"

[dependencies]
# iced — GPU-accelerated UI framework using wgpu (Metal/Vulkan/DirectX)
# Available on crates.io — no git clone needed
iced = { version = "0.13", features = ["canvas", "wgpu", "multi-window", "tokio"] }

# Audio engine
aetherdsp-core    = { version = "0.1", path = "../aether-core" }
aetherdsp-nodes   = { version = "0.2", path = "../aether-nodes" }
aetherdsp-midi    = { version = "0.1", path = "../aether-midi" }
aetherdsp-sampler = { version = "0.2", path = "../aether-sampler" }

# Audio I/O
cpal = { workspace = true }

# Shared state
arc-swap = { workspace = true }
ringbuf  = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
