[package]
name = "aether-tauri"
version = "0.1.0"
description = "Aether Studio desktop application"
authors = []
license = ""
repository = ""
default-run = "aether-tauri"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["shell-execute", "shell-sidecar", "dialog-all", "fs-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
